# PuhtonProject_PreciousSource

./: .gitignore  Pipfile  README.md  babel.cfg  database.sql  dodo.py  pyproject.toml  requirements.txt  server.py  setup.cfg  test.py
bot/: bot.py
docs/: interface_prototype.md
docs/source/: index.rst
habit/: .env
habit/bot/: __init__.py  __main__.py  bot.py  test.py
habit/docs/doctrees/: environment.pickle  index.doctree
habit/docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
habit/docs/html/_modules/: index.html
habit/docs/html/_modules/habit/: bot.html
habit/locale/: messages.pot
habit/locale/ru/LC_MESSAGES/: messages.po
locale/: messages.pot
locale/ru/LC_MESSAGES/: messages.po
source/: conf.py
